--- a/public/babura.html
+++ b/public/babura.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/babura.jpg" alt="babura">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
