--- a/public/martabak.html
+++ b/public/martabak.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/martabak.jpg" alt="smartabak thamrin">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
