--- a/public/steak.html
+++ b/public/steak.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/steak-21.jpg" alt="steak-21">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
