--- a/public/two-odd-soul.html
+++ b/public/two-odd-soul.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img//two-odd-soul.jpg" alt="two odd soul">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
