--- a/public/bihun.html
+++ b/public/bihun.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/bihun.jpg" alt="ak bihun">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
