--- a/public/chasio.html
+++ b/public/chasio.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/chasio.jpg" alt="chasio afuk 88">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
