--- a/public/kari-bihun.html
+++ b/public/kari-bihun.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/kari.jpg" alt="kari bihun">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
