--- a/public/kebun-kopi.html
+++ b/public/kebun-kopi.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/kebun-kopi.jpg" alt="kebun kopi">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
