--- a/public/lontong.html
+++ b/public/lontong.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/lontong-sayur.jpg" alt="lontong sayur">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
