--- a/public/mie-rebus.html
+++ b/public/mie-rebus.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/mie-rebus.jpg" alt="">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
