--- a/public/mie-sop.html
+++ b/public/mie-sop.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/mie-sop.jpg" alt="mie sop">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
