--- a/public/papa-kerang.html
+++ b/public/papa-kerang.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/kerang.jpg" alt="papa kerang rebus">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
