--- a/public/sate.html
+++ b/public/sate.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/sate.jpg" alt="sate padang triadi">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
