--- a/public/shisamo.html
+++ b/public/shisamo.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/shisamo.jpg" alt="shisamo">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
