--- a/public/sosis-abang.html
+++ b/public/sosis-abang.html
@@ -11,6 +11,6 @@
     <hr>
     <img src="../assets/img/sosis.jpg" alt="sosis abang">
     <br>
-    <a class="big" href="/">back</a>
+    <a class="big" href="../">back</a>
 </body>
 </html>
